[package]
name = "rust_axum_restapi"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.51.0", features = ["full"] }
tower = { version = "0.5.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
